# bt-rust

./: Cargo.toml  Makefile  README.md  metainfo
src/: bencode.rs  main.rs  metainfo.rs  torrentfile.rs
src/bencode_serde/: de.rs  error.rs  json_de.rs  json_ser.rs  mod.rs  ser.rs
