[package]
name = "bt-rust"
version = "0.1.0"
authors = ["Matt Bessey <matt.bessey@immersivelabs.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
sha-1 = "0.8.2"
