[package]
name = "bt-rust"
version = "0.1.0"
authors = ["Matt Bessey <matt.bessey@immersivelabs.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
sha-1 = "0.8.2"
serde_bencode = "^0.2.1"
serde = { version = "^1.0.0", features = ["derive"] }
serde_bytes = "^0.11.0"
md-5 = "^0.10.5"
base16ct = { version = "0.2.0", features = ["alloc"] }
